--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LIFF Starter</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     </head>
     <body>
         <div id="liffAppContent">
@@ -14,7 +15,7 @@
                     <button id="openWindowButton">Open External Window</button>
                     <button id="closeWindowButton">Close LIFF App</button>
                 </div>
-                <div class="buttonRow">
+                <!-- <div class="buttonRow">
                     <button id="scanQrCodeButton">Open QR Code Reader</button>
                     <button id="sendMessageButton">Send Message</button>
                 </div>
@@ -24,11 +25,11 @@
                 </div>
                 <div class="buttonRow">
                     <button id="shareTargetPicker">Open Share Target Picker</button>
-                </div>
+                </div> -->
             </div>
             <div id="shareTargetPickerMessage"></div>
             <!-- ACCESS TOKEN DATA -->
-            <div id="accessTokenData" class="hidden textLeft">
+            <!-- <div id="accessTokenData" class="hidden textLeft">
                 <h2>Access Token</h2>
                 <a href="#" onclick="toggleAccessToken()">Close Access Token</a>
                 <table>
@@ -37,9 +38,9 @@
                         <td id="accessTokenField"></td>
                     </tr>
                 </table>
-            </div>
+            </div> -->
             <!-- SCAN QR RESULT -->
-            <div id="scanQr" class="hidden textLeft">
+            <!-- <div id="scanQr" class="hidden textLeft">
                 <h2>QR Code reader</h2>
                 <a href="#" onclick="toggleQrCodeReader()">Close QR Code Reader Result</a>
                 <table>
@@ -48,29 +49,14 @@
                         <td id="scanQrField"></td>
                     </tr>
                 </table>
-            </div>
+            </div> -->
             <!-- PROFILE INFO -->
             <div id="profileInfo" class="hidden textLeft">
                 <h2>Profile</h2>
-                <a href="#" onclick="toggleProfileData()">Close Profile</a>
-                <div id="profilePictureDiv">
-                </div>
-                <table>
-                    <tr>
-                        <th>userId</th>
-                        <td id="userIdProfileField"></td>
-                    </tr>
-                    <tr>
-                        <th>displayName</th>
-                        <td id="displayNameField"></td>
-                    </tr>
-                    <tr>
-                        <th>statusMessage</th>
-                        <td id="statusMessageField"></td>
-                    </tr>
-                </table>
+                <a href="#" onclick="getQRCode()">Get QRCode</a>
+                <div id="qrcode"></div>
             </div>
-            <!-- LIFF DATA -->
+            <!-- LIFF DATA
             <div id="liffData">
                 <h2 id="liffDataHeader" class="textLeft">LIFF Data</h2>
                 <table>
@@ -99,7 +85,7 @@
                         <td id="isLoggedIn" class="textLeft"></td>
                     </tr>
                 </table>
-            </div>
+            </div> -->
             <!-- LOGIN LOGOUT BUTTONS -->
             <div class="buttonGroup">
                 <button id="liffLoginButton">Log in</button>
@@ -113,7 +99,7 @@
                 </div>
             </div>
         </div>
-        <!-- LIFF ID ERROR -->
+        <!-- LIFF ID ERROR
         <div id="liffIdErrorMessage" class="hidden">
             <p>You have not assigned any value for LIFF ID.</p>
             <p>If you are running the app using Node.js, please set the LIFF ID as an environment variable in your Heroku account follwing the below steps: </p>
@@ -128,7 +114,7 @@
             </code>
             <p>If you are using any other platform, please add your LIFF ID in the <code>index.html</code> file.</p>
             <p>For more information about how to add your LIFF ID, see <a href="https://developers.line.biz/en/reference/liff/#initialize-liff-app">Initializing the LIFF app</a>.</p>
-        </div>
+        </div> -->
         <!-- LIFF INIT ERROR -->
         <div id="liffInitErrorMessage" class="hidden">
             <p>Something went wrong with LIFF initialization.</p>
