--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             <!-- ACTION BUTTONS -->
             <div class="buttonGroup">
                 <div class="buttonRow">
-                    <button id="openWindowButton">Open External Window</button>
+                    <!-- <button id="openWindowButton">Open External Window</button> -->
                     <button id="closeWindowButton">Close LIFF App</button>
                 </div>
                 <!-- <div class="buttonRow">
@@ -51,7 +51,7 @@
                 </table>
             </div> -->
             <!-- PROFILE INFO -->
-            <div id="profileInfo" class="hidden textLeft">
+            <div id="profileInfo" class="textLeft">
                 <h2>Profile</h2>
                 <a href="#" onclick="getQRCode()">Get QRCode</a>
                 <div id="qrcode"></div>
