--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
     </head>
     <body>
         <div id="liffAppContent">
-            <div id="profileInfo" class="textLeft">
+            <div id="profileInfo" class="">
                 <h2>Profile</h2>
-                <a href="#" onclick="getQRCode()">Get QRCode</a>
+                <a href="#" class="pure-button"  onclick="getQRCode()">Get QRCode</a>
                 <div id="qrcode"></div>
             </div>
             <div class="buttonRow">
+                <br>
                 <!-- <button id="openWindowButton">Open External Window</button> -->
                 <button id="closeWindowButton">Close LIFF App</button>
             </div>
