--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <div id="liffAppContent">
-            <div id="profileInfo" class="">
+            <!-- <div id="profileInfo" class="">
                 <h2>Profile</h2>
                 <a href="#" class="pure-button"  onclick="getQRCode()">Get QRCode</a>
                 <div id="qrcode"></div>
-            </div>
+            </div> -->
             <div class="buttonRow">
                 <br>
                 <!-- <button id="openWindowButton">Open External Window</button> -->
@@ -27,12 +27,12 @@
                 <!-- <div class="buttonRow">
                     <button id="scanQrCodeButton">Open QR Code Reader</button>
                     <button id="sendMessageButton">Send Message</button>
-                </div>
+                </div> -->
                 <div class="buttonRow">
                     <button id="getAccessToken">Get Access Token</button>
                     <button id="getProfileButton">Get Profile</button>
                 </div>
-                <div class="buttonRow">
+                <!-- <div class="buttonRow">
                     <button id="shareTargetPicker">Open Share Target Picker</button>
                 </div> -->
             </div>
