--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             </div>
             <div id="shareTargetPickerMessage"></div>
             <!-- ACCESS TOKEN DATA -->
-            <!-- <div id="accessTokenData" class="hidden textLeft">
+            <div id="accessTokenData" class="hidden textLeft">
                 <h2>Access Token</h2>
                 <a href="#" onclick="toggleAccessToken()">Close Access Token</a>
                 <table>
@@ -47,7 +47,7 @@
                         <td id="accessTokenField"></td>
                     </tr>
                 </table>
-            </div> -->
+            </div>
             <!-- SCAN QR RESULT -->
             <!-- <div id="scanQr" class="hidden textLeft">
                 <h2>QR Code reader</h2>
