--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             </div>
             <div id="shareTargetPickerMessage"></div>
             <!-- ACCESS TOKEN DATA -->
-            <div id="accessTokenData" class="hidden textLeft">
+            <div id="accessTokenData" class="textLeft">
                 <h2>Access Token</h2>
                 <a href="#" onclick="toggleAccessToken()">Close Access Token</a>
                 <table>
